# doc/swagger/imchat.swagger.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "title": "IM Chat API",
-    "version": "1.1",
+    "version": "1.2",
     "contact": {
       "name": "qianxia",
       "url": "https://github.com/qianxia639"
@@ -10,10 +10,10 @@
   },
   "tags": [
     {
-      "name": "User"
+      "name": "Message"
     },
     {
-      "name": "Message"
+      "name": "User"
     }
   ],
   "consumes": [
@@ -23,6 +23,48 @@
     "application/json"
   ],
   "paths": {
+    "/v1/send": {
+      "post": {
+        "operationId": "Message_SendMessage",
+        "responses": {
+          "200": {
+            "description": "A successful response.(streaming responses)",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "result": {
+                  "$ref": "#/definitions/pbSendMessageResponse"
+                },
+                "error": {
+                  "$ref": "#/definitions/rpcStatus"
+                }
+              },
+              "title": "Stream result of pbSendMessageResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "description": " (streaming inputs)",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/pbSendMessageRequest"
+            }
+          }
+        ],
+        "tags": [
+          "Message"
+        ]
+      }
+    },
     "/v1/user": {
       "post": {
         "summary": "Create new user",
@@ -210,6 +252,14 @@
       "type": "object",
       "properties": {
         "token": {
+          "type": "string"
+        }
+      }
+    },
+    "pbSendMessageRequest": {
+      "type": "object",
+      "properties": {
+        "msg": {
           "type": "string"
         }
       }
